--- a/index.html
+++ b/index.html
@@ -3,7 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About Chickelani</title>
   </head>
-  <body></body>
+  <body>
+    <!--About section-->
+
+    <section class="about" id="about">
+      <h1 class="heading"><span>About</span> us</h1>
+      <div class="row">
+        <div class="video-container">
+          <video
+            src="./images/AboutSectionFlowerVideo.mp4"
+            loop
+            autoplay
+            muted
+          ></video>
+          <h3>Best flowers sellers</h3>
+        </div>
+        <div class="content">
+          <h3>Why choose us?</h3>
+          <p>
+            Welcome to our flower shop, where blossoms come to life with
+            unparalleled quality and freshness. Our expert florists, armed with
+            creativity and a passion for their craft, stand ready to turn your
+            floral dreams into reality. At Chickelani, we pride ourselves on
+            customization, ensuring each arrangement is a unique reflection of
+            your personal style. With a commitment to prompt delivery, your
+            blooms will arrive at their destination in pristine condition,
+            brightening the day of your loved ones. But what truly sets us apart
+            is our dedication to customer satisfaction, echoed in the glowing
+            reviews and testimonials from our delighted clientele. From
+            exclusive and signature designs to environmentally friendly
+            practices, we strive to exceed expectations. Our easy ordering
+            process, whether online or in-store, ensures a seamless experience.
+            Specializing in occasions that matter most, we craft stunning
+            arrangements for weddings, anniversaries, birthdays, and more. As a
+            proud member of the community, [Your Shop Name] is not just a flower
+            shop; it's a destination where beauty, quality, and communitys
+            converge.
+          </p>
+          <p>
+            Our easy ordering process, whether online or in-store, ensures a
+            seamless experience. Specializing in occasions that matter most, we
+            craft stunning arrangements for weddings, anniversaries, birthdays,
+            and more. As a proud member of the community, Chickelani is not just
+            a flower shop; it's a destination where beauty, quality, and
+            communitys converge.
+          </p>
+          <a href="#" class="btn">Learn More</a>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
