--- a/0-index.html
+++ b/0-index.html
@@ -10,6 +10,8 @@
 <body>
   <!-- Header Section -->
   <header class="header">
+    <label for="toggler" class="fas fa-bars"></label>
+    <input type="checkbox" name="toggler" id="toggler">
     <a href="#" class="logo">Blossom<span>.</span></a>
 
     <nav class="navbar">
@@ -28,5 +30,7 @@
     </div>
 
   </header>
+
+  <!-- Home Section -->
 </body>
 </html>
