--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         our dedication to customer satisfaction, echoed in the glowing
         reviews and testimonials from our delighted clientele. From
         exclusive and signature designs to environmentally friendly
-        practices, we strive to exceed expectations.
+        practices, we strive to exceed expectation.
       </p>
       <p>
         Our easy ordering process, whether online or in-store, ensures a
