--- a/index.html
+++ b/index.html
@@ -113,6 +113,219 @@
       <span>Protected by paypal</span>
     </div>
   </div>
+
+  <!-- Products Section -->
+
+<section class="products" id="products">
+  <h1 class="heading">latest <span>products</span></h1>
+  <div class="box-container">
+      <div class="box">
+          <span class="discount">-10%</span>
+          <div class="image">
+              <img src="./images/First flower picture.jpg" alt="">
+              <div class="icons">
+                  <a href="#" class="fas fa-heart"></a>
+                  <a href="#" class="cart-btn">add to cart</a>
+                  <a href="#" class="fas fa-share"></a>
+              </div>
+          </div>
+          <div class="content">
+              <h3>Valentine's Special</h3>
+              <div class="price">$17.99 <span>$15.99</span></div>
+          </div>
+      </div>
+
+      <div class="box">
+        <span class="discount">-15%</span>
+        <div class="image">
+            <img src="./images/Second flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Valentine's Special</h3>
+            <div class="price">$13.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-5%</span>
+        <div class="image">
+            <img src="./images/Third flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Valentine's Special</h3>
+            <div class="price">$14.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+
+<section class="products" id="products">
+  <h1 class="heading">latest <span>products</span></h1>
+  <div class="box-container">
+    <div class="box">
+        <span class="discount">-20%</span>
+        <div class="image">
+            <img src="./images/Fourth flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Birthday</h3>
+            <div class="price">$12.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-17%</span>
+        <div class="image">
+            <img src="./images/fifth flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Birthday</h3>
+            <div class="price">$14.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-3%</span>
+        <div class="image">
+            <img src="./images/Sixth flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Birthday</h3>
+            <div class="price">$18.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+
+<section class="products" id="products">
+  <h1 class="heading">latest <span>products</span></h1>
+  <div class="box-container">    
+    <div class="box">
+        <span class="discount">-18%</span>
+        <div class="image">
+            <img src="./images/Seventh flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Romance</h3>
+            <div class="price">$15.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-10%</span>
+        <div class="image">
+            <img src="./images/Eight flower flower.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Romance</h3>
+            <div class="price">$17.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-5%</span>
+        <div class="image">
+            <img src="./images/Ninth flower picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Romance</h3>
+            <div class="price">$11.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+
+<section class="products" id="products">
+  <h1 class="heading">latest <span>products</span></h1>
+  <div class="box-container">
+    <div class="box">
+        <span class="discount">-11%</span>
+        <div class="image">
+            <img src="./images/Tenth gift idea.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Gift Idea</h3>
+            <div class="price">$11.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-9%</span>
+        <div class="image">
+            <img src="./images/Eleventh picture.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Flower pot</h3>
+            <div class="price">$13.99 <span>$15.99</span></div>
+        </div>
+    </div>
+
+    <div class="box">
+        <span class="discount">-5%</span>
+        <div class="image">
+            <img src="./images/Twelenth gift idea.jpg" alt="">
+            <div class="icons">
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="cart-btn">add to cart</a>
+                <a href="#" class="fas fa-share"></a>
+            </div>
+        </div>
+        <div class="content">
+            <h3>Gift Idea</h3>
+            <div class="price">$41,200 <span>$15.99</span></div>
+        </div>
+    </div>
+</div>
+</section>
+<!--Products section ends-->
+
 </body>
 </html>
 
