--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
   <!-- Products Section -->
 
 <section class="products" id="products">
-  <h1 class="heading">latest <span>products</span></h1>
+  <h1 class="heading">Bestselling Valentine's Day Flowers in Abuja & Capetown</h1>
   <div class="box-container">
       <div class="box">
-          <span class="discount">-10%</span>
           <div class="image">
               <img src="./images/First flower picture.jpg" alt="">
               <div class="icons">
@@ -130,13 +129,12 @@
               </div>
           </div>
           <div class="content">
-              <h3>Valentine's Special</h3>
+              <h3>RED ROSES BOUQUET</h3>
               <div class="price">$17.99 <span>$15.99</span></div>
           </div>
       </div>
 
       <div class="box">
-        <span class="discount">-15%</span>
         <div class="image">
             <img src="./images/Second flower picture.jpg" alt="">
             <div class="icons">
@@ -146,13 +144,12 @@
             </div>
         </div>
         <div class="content">
-            <h3>Valentine's Special</h3>
+            <h3>FERRERO ROCHER & ROSES BOUQUET</h3>
             <div class="price">$13.99 <span>$15.99</span></div>
         </div>
     </div>
 
     <div class="box">
-        <span class="discount">-5%</span>
         <div class="image">
             <img src="./images/Third flower picture.jpg" alt="">
             <div class="icons">
@@ -162,17 +159,16 @@
             </div>
         </div>
         <div class="content">
-            <h3>Valentine's Special</h3>
+            <h3>MON COEUR (MY HEART)</h3>
             <div class="price">$14.99 <span>$15.99</span></div>
         </div>
     </div>
 
 
 <section class="products" id="products">
-  <h1 class="heading">latest <span>products</span></h1>
+  <h1 class="heading">Bestselling Birthday & Anniversary Flowers in Abuja & Capetown</h1>
   <div class="box-container">
     <div class="box">
-        <span class="discount">-20%</span>
         <div class="image">
             <img src="./images/Fourth flower picture.jpg" alt="">
             <div class="icons">
@@ -182,7 +178,7 @@
             </div>
         </div>
         <div class="content">
-            <h3>Birthday</h3>
+            <h3>MIXED RED ROSES</h3>
             <div class="price">$12.99 <span>$15.99</span></div>
         </div>
     </div>
@@ -198,7 +194,7 @@
             </div>
         </div>
         <div class="content">
-            <h3>Birthday</h3>
+            <h3>COOL & CLASSIC</h3>
             <div class="price">$14.99 <span>$15.99</span></div>
         </div>
     </div>
@@ -214,17 +210,16 @@
             </div>
         </div>
         <div class="content">
-            <h3>Birthday</h3>
+            <h3>FERRERO ROCHER & ROSES BOUQUET</h3>
             <div class="price">$18.99 <span>$15.99</span></div>
         </div>
     </div>
 
 
 <section class="products" id="products">
-  <h1 class="heading">latest <span>products</span></h1>
+  <h1 class="heading">Bestselling Romance or Just To Say Flowers in Abuja & Capetown</h1>
   <div class="box-container">    
     <div class="box">
-        <span class="discount">-18%</span>
         <div class="image">
             <img src="./images/Seventh flower picture.jpg" alt="">
             <div class="icons">
@@ -234,7 +229,7 @@
             </div>
         </div>
         <div class="content">
-            <h3>Romance</h3>
+            <h3>BEAUTIFUL MIXED ROSES AND MILLION STARS</h3>
             <div class="price">$15.99 <span>$15.99</span></div>
         </div>
     </div>
@@ -250,7 +245,7 @@
             </div>
         </div>
         <div class="content">
-            <h3>Romance</h3>
+            <h3>MIXED ROSES AND LILIES BOUQUET</h3>
             <div class="price">$17.99 <span>$15.99</span></div>
         </div>
     </div>
@@ -266,17 +261,16 @@
             </div>
         </div>
         <div class="content">
-            <h3>Romance</h3>
+            <h3>CLASSIC ROSES AND BLACK BOX ARRANGEMENT</h3>
             <div class="price">$11.99 <span>$15.99</span></div>
         </div>
     </div>
 
 
 <section class="products" id="products">
-  <h1 class="heading">latest <span>products</span></h1>
+  <h1 class="heading">Gift Ideas</h1>
   <div class="box-container">
     <div class="box">
-        <span class="discount">-11%</span>
         <div class="image">
             <img src="./images/Tenth gift idea.jpg" alt="">
             <div class="icons">
@@ -286,7 +280,7 @@
             </div>
         </div>
         <div class="content">
-            <h3>Gift Idea</h3>
+            <h3>BUNDLED PRODUCTS</h3>
             <div class="price">$11.99 <span>$15.99</span></div>
         </div>
     </div>
@@ -302,29 +296,111 @@
             </div>
         </div>
         <div class="content">
-            <h3>Flower pot</h3>
+            <h3>BUNDLED PRODUCTS</h3>
             <div class="price">$13.99 <span>$15.99</span></div>
         </div>
     </div>
 
     <div class="box">
-        <span class="discount">-5%</span>
-        <div class="image">
-            <img src="./images/Twelenth gift idea.jpg" alt="">
-            <div class="icons">
-                <a href="#" class="fas fa-heart"></a>
-                <a href="#" class="cart-btn">add to cart</a>
-                <a href="#" class="fas fa-share"></a>
-            </div>
-        </div>
-        <div class="content">
-            <h3>Gift Idea</h3>
-            <div class="price">$41,200 <span>$15.99</span></div>
-        </div>
-    </div>
+      <span class="discount">-17%</span>
+      <div class="image">
+          <img src="./images/Twelenth gift idea.jpg" alt="">
+          <div class="icons">
+              <a href="#" class="fas fa-heart"></a>
+              <a href="#" class="cart-btn">add to cart</a>
+              <a href="#" class="fas fa-share"></a>
+          </div>
+      </div>
+      <div class="content">
+          <h3>CAR PRESENT</h3>
+          <div class="price">$14.99 <span>$15.99</span></div>
+      </div>
+  </div> 
 </div>
 </section>
-<!--Products section ends-->
+
+
+<!--review section starts-->
+<section class="review" id="review">
+  <h1 class="heading">customer's <span>review</span></h1>
+  <div class="box-container">
+      <div class="box">
+          <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+          </div>
+          <p>A heartfelt thank you to this flower shop for making my anniversary memorable! The bouquet was a work of art, and the attention to detail was extraordinary. My wife and I are over the moon!</p>
+          <div class="user">
+              <img src="./images/one passport flower.jpg" alt="">
+              <div class="user-info">
+                  <h3>Maxwell Mokoena</h3>
+                  <span>Happy Customers</span>
+              </div>
+          </div>
+          <span class="fas fa-quote-right"></span>
+      </div>
+
+      <div class="box">
+          <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+          </div>
+          <p>I'm beyond satisfied with the flowers I ordered for my mom's retirement celebration. The arrangement was elegant, and the colors were perfect. The quality and service are unmatched!</p>
+          <div class="user">
+              <img src="./images/second passport flower.webp" alt="">
+              <div class="user-info">
+                  <h3>Angel Ogbonna</h3>
+                  <span>Happy Customers</span>
+              </div>
+          </div>
+          <span class="fas fa-quote-right"></span>
+      </div>
+
+      <div class="box">
+          <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+          </div>
+          <p>What a delightful surprise! The bouquet I ordered for my wife's birthday was not only breathtaking but also arrived right on time. Thank you for making her day extra special!</p>
+          <div class="user">
+              <img src="./images/third passport flower.avif" alt="">
+              <div class="user-info">
+                  <h3>Mmesoma Anya</h3>
+                  <span>Happy Customers</span>
+              </div>
+          </div>
+          <span class="fas fa-quote-right"></span>
+      </div>
+
+      <div class="box">
+          <div class="stars">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+          </div>
+          <p>Kudos to the flower shop team! The custom bouquet I requested for a special occasion exceeded all expectations. The recipient was thrilled, and I'm now a devoted customer. Thank you for spreading joy!</p>
+          <div class="user">
+              <img src="./images/four passport flower.jpg" alt="">
+              <div class="user-info">
+                  <h3>Amogelang Aphiwe</h3>
+                  <span>Happy Customers</span>
+              </div>
+          </div>
+          <span class="fas fa-quote-right"></span>
+      </div>
+  </div>
+</section>
 
 </body>
 </html>
