--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div class="box-container">
       <div class="box">
           <div class="image">
-              <img src="./images/First flower picture.jpg" alt="">
+              <img src="./images/First flower picture.jpg" alt="picture of product 1">
               <div class="icons">
                   <a href="#" class="fas fa-heart"></a>
                   <a href="#" class="cart-btn">add to cart</a>
@@ -130,13 +130,13 @@
           </div>
           <div class="content">
               <h3>RED ROSES BOUQUET</h3>
-              <div class="price">$17.99 <span>$15.99</span></div>
+              <div class="price">$17.99 </div>
           </div>
       </div>
 
       <div class="box">
         <div class="image">
-            <img src="./images/Second flower picture.jpg" alt="">
+            <img src="./images/Second flower picture.jpg" alt="picture of product 2">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -145,13 +145,13 @@
         </div>
         <div class="content">
             <h3>FERRERO ROCHER & ROSES BOUQUET</h3>
-            <div class="price">$13.99 <span>$15.99</span></div>
+            <div class="price">$13.99 </div>
         </div>
     </div>
 
     <div class="box">
         <div class="image">
-            <img src="./images/Third flower picture.jpg" alt="">
+            <img src="./images/Third flower picture.jpg" alt="picture of product 3">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -160,7 +160,7 @@
         </div>
         <div class="content">
             <h3>MON COEUR (MY HEART)</h3>
-            <div class="price">$14.99 <span>$15.99</span></div>
+            <div class="price">$19.99 </div>
         </div>
     </div>
 
@@ -170,7 +170,7 @@
   <div class="box-container">
     <div class="box">
         <div class="image">
-            <img src="./images/Fourth flower picture.jpg" alt="">
+            <img src="./images/Fourth flower picture.jpg" alt="picture of product 4">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -179,14 +179,14 @@
         </div>
         <div class="content">
             <h3>MIXED RED ROSES</h3>
-            <div class="price">$12.99 <span>$15.99</span></div>
+            <div class="price">$12.99</div>
         </div>
     </div>
 
     <div class="box">
         <span class="discount">-17%</span>
         <div class="image">
-            <img src="./images/fifth flower picture.jpg" alt="">
+            <img src="./images/fifth flower picture.jpg" alt="picture of product 5">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -202,7 +202,7 @@
     <div class="box">
         <span class="discount">-3%</span>
         <div class="image">
-            <img src="./images/Sixth flower picture.jpg" alt="">
+            <img src="./images/Sixth flower picture.jpg" alt="picture of product 6">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -211,7 +211,7 @@
         </div>
         <div class="content">
             <h3>FERRERO ROCHER & ROSES BOUQUET</h3>
-            <div class="price">$18.99 <span>$15.99</span></div>
+            <div class="price">$13.99 <span>$15.99</span></div>
         </div>
     </div>
 
@@ -221,7 +221,7 @@
   <div class="box-container">    
     <div class="box">
         <div class="image">
-            <img src="./images/Seventh flower picture.jpg" alt="">
+            <img src="./images/Seventh flower picture.jpg" alt="picture of product 7">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -230,14 +230,14 @@
         </div>
         <div class="content">
             <h3>BEAUTIFUL MIXED ROSES AND MILLION STARS</h3>
-            <div class="price">$15.99 <span>$15.99</span></div>
+            <div class="price">$15.99</div>
         </div>
     </div>
 
     <div class="box">
         <span class="discount">-10%</span>
         <div class="image">
-            <img src="./images/Eight flower flower.jpg" alt="">
+            <img src="./images/Eight flower flower.jpg" alt="picture of product 8">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -246,14 +246,14 @@
         </div>
         <div class="content">
             <h3>MIXED ROSES AND LILIES BOUQUET</h3>
-            <div class="price">$17.99 <span>$15.99</span></div>
+            <div class="price">$15.99 <span>$17.99</span></div>
         </div>
     </div>
 
     <div class="box">
         <span class="discount">-5%</span>
         <div class="image">
-            <img src="./images/Ninth flower picture.jpg" alt="">
+            <img src="./images/Ninth flower picture.jpg" alt="picture of product 9">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -272,7 +272,7 @@
   <div class="box-container">
     <div class="box">
         <div class="image">
-            <img src="./images/Tenth gift idea.jpg" alt="">
+            <img src="./images/Tenth gift idea.jpg" alt="picture of product 10">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -288,7 +288,7 @@
     <div class="box">
         <span class="discount">-9%</span>
         <div class="image">
-            <img src="./images/Eleventh picture.jpg" alt="">
+            <img src="./images/Eleventh picture.jpg" alt="picture of product 11">
             <div class="icons">
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="cart-btn">add to cart</a>
@@ -304,7 +304,7 @@
     <div class="box">
       <span class="discount">-17%</span>
       <div class="image">
-          <img src="./images/Twelenth gift idea.jpg" alt="">
+          <img src="./images/Twelenth gift idea.jpg" alt="picture of product 12">
           <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -313,14 +313,14 @@
       </div>
       <div class="content">
           <h3>CAR PRESENT</h3>
-          <div class="price">$14.99 <span>$15.99</span></div>
+          <div class="price">$15000 <span>$25000</span>
       </div>
   </div> 
 </div>
 </section>
 
 
-<!--review section starts-->
+<!--review section-->
 <section class="review" id="review">
   <h1 class="heading">customer's <span>review</span></h1>
   <div class="box-container">
@@ -400,6 +400,48 @@
           <span class="fas fa-quote-right"></span>
       </div>
   </div>
+</section>
+
+
+
+<!--contact section-->
+<section class="contact" id="contact">
+    <h1 class="heading"><span>Contact</span> Us</h1>
+    <div class="row">
+        <form action="">
+            <input type="text" class="box" placeholder="Name">
+            <input type="email" class="box" placeholder="Email">
+            <input type="number" class="box" placeholder="Number">
+            <textarea name="" class="box" placeholder="Message" id="" cols="30" rows="10"></textarea>
+            <input type="submit" value="send massage" class="btn">
+        </form>
+        </div>
+    </div>
+</section>
+
+
+<!--footer section starts-->
+<section class="footer">
+    <div class="box-container">
+        <div class="box">
+            <h3>Locations</h3>
+            <a href="#">Abuja, Nigeria</a>
+            <a href="#">Cape Town. South Africa</a>
+            <img src="./images/locationIcon.png" alt="location icon">
+        </div>
+
+        <div class="box">
+            <h3>Contact Info</h3>
+            <a href="#">+234-806-1234 5678</a>
+            <a href="#">blossomflowers@gmail.com</a>
+            <a href="#">Abuja, Nigeria - 900001</a>
+          <img src="./images/contactIcon.png" alt=" contact info icon">
+       
+        </div>
+    </div>
+    <div class="credit">
+        &copy; Created by <span> Chiamaka & Yamkelani</span> All Right Reserved.
+    </div>
 </section>
 
 </body>
